# Hello-Wiki

./: .gitignore  AGENTS.md  DAY2_API_DOCUMENTATION.md  DAY2_VERIFICATION.md  README.md  day2-task.md  package.json  pnpm-lock.yaml  更新内容.md
apps/backend/: .env.example  ARCHITECTURE_RULES.md  DEVELOPMENT_GUIDE.md  IMPORT_LINTER_GUIDE.md  README.md  SETUP_COMPLETE.md  encoding_utils.py  fix_all_scripts.py  hello_wiki.db  main.py  package.json  pyproject.toml  requirements.txt  run.py  run_test.py  test_day2.py  verify_database.py  worker.py
apps/backend/deploy/observability/: README.md  docker-compose.yml  promtail-config.yml
apps/backend/scripts/: __init__.py  init_db.py  mvp.py  test_db_init.py
apps/backend/src/: main.py
apps/backend/src/api/: deps.py  gateway.py  router.py
apps/backend/src/application/: __init__.py  compile_application.py  orchestration.py  qa_application.py  tag_application.py  wiki_application.py
apps/backend/src/core/: __init__.py  audit.py  auth.py  config.py  context.py  database.py  logging.py  observability.py  tracing.py
apps/backend/src/domain/: __init__.py
apps/backend/src/infra/: __init__.py  providers.py
apps/backend/src/infrastructure/: wiring.py
apps/backend/src/models/: __init__.py  parsing.py  version.py  wiki.py
apps/backend/src/repositories/: wiki.py  (+2 more)
apps/backend/tests/: conftest.py  helpers.py  test_api_contracts.py  test_api_deps.py  test_gateway.py  test_logging.py  test_main.py  test_observability.py  test_repositories.py  test_tracing.py  test_worker_broker.py  test_worker_context.py  test_worker_tasks.py
(+114 files in other folders)
