[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-wiki-backend"
version = "0.1.0"
description = "Minimal runnable backend scaffold for Hello Wiki."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "sqlmodel>=0.0.22",
  "taskiq>=0.11.10",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
